crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__mor_4.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: tier
---
items:
  - main:
      pos: cconj
      lemma: en
      features: []
    post_clitics: []
  - main:
      pos: pron
      lemma: ze
      features:
        - Prs
        - S3
    post_clitics: []
  - main:
      pos: verb
      lemma: gelen
      features:
        - Fin
        - Pres
        - S
    post_clitics: []
  - main:
      pos: det
      lemma: het
      features:
        - Def
    post_clitics: []
  - main:
      pos: noun
      lemma: water
      features:
        - Neut
        - Acc
    post_clitics: []
  - main:
      pos: adp
      lemma: over
      features: []
    post_clitics: []
  - main:
      pos: det
      lemma: de
      features:
        - Def
    post_clitics: []
  - main:
      pos: noun
      lemma: bloem
      features: []
    post_clitics: []
terminator:
  Period: "."
