crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__participants_3.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result
---
entries:
  - words:
      - CHI
      - Target_Child
  - words:
      - INV1
      - Investigator
  - words:
      - INV2
      - Investigator
