crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__pho_parsed_4.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: tier
---
items:
  - Word:
      segments:
        - ˈbɛt̪
terminator: ~
